--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,7 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/djangocode/django-helloworld-master
+    file_exists_behavior: OVERWRITE
 permissions:
   - object: /home/ubuntu/djangocode/django-helloworld-master
     pattern: "**"
