--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
       python: 3.11
     commands:
       - pip install -r requirements.txt
+      - pip install pytest  # Install pytest
   build:
     commands:
       - pytest tests/
