--- a/appspec.yml
+++ b/appspec.yml
@@ -9,3 +9,6 @@ permissions:
     pattern: "**"
     owner: ubuntu
     group: ubuntu
+hooks:
+  BeforeInstall:
+    - location: scripts/custom_script.sh
