--- a/appspec.yml
+++ b/appspec.yml
@@ -11,4 +11,4 @@ permissions:
     group: ubuntu
 hooks:
   BeforeInstall:
-    - location: scripts/custom_script.sh
+    - location: scripts/before_install.sh
