--- a/appspec.yml
+++ b/appspec.yml
@@ -12,3 +12,11 @@ permissions:
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
+  AfterInstall:
+    - location: scripts/post_install.sh
+      timeout: 300
+      runas: ubuntu
+  ApplicationStart:
+    - location: scripts/start_application.sh
+      timeout: 300
+      runas: ubuntu  
