--- a/appspec.yml
+++ b/appspec.yml
@@ -12,11 +12,13 @@ permissions:
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
+      timeout: 300
+      runas: root
   AfterInstall:
     - location: scripts/post_install.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
   ApplicationStart:
     - location: scripts/start_application.sh
       timeout: 300
-      runas: ubuntu  
+      runas: root  
